// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders the component 1`] = `
<div
  class="Asset"
  data-test-id="cf-ui-asset"
>
  <div
    class="Asset__image-container"
  >
    <img
      alt="Image of a cat"
      class="Asset__image-container__image"
      src="https://via.placeholder.com/200x300"
    />
  </div>
  <div
    class="Asset__title-container"
  >
    <span
      class="Asset__title-container__title"
    >
      Image of a cat
    </span>
  </div>
</div>
`;

exports[`renders the component with an additional class name 1`] = `
<div
  class="Asset extra-class-name"
  data-test-id="cf-ui-asset"
>
  <div
    class="Asset__image-container"
  >
    <img
      alt="Image of a cat"
      class="Asset__image-container__image"
      src="https://via.placeholder.com/200x300"
    />
  </div>
  <div
    class="Asset__title-container"
  >
    <span
      class="Asset__title-container__title"
    >
      Image of a cat
    </span>
  </div>
</div>
`;

exports[`renders the component with type pdf 1`] = `
.emotion-0 {
  display: inline-block;
  fill: #0059C8;
  height: 18px;
  width: 18px;
}

<div
  class="Asset extra-class-name"
  data-test-id="cf-ui-asset"
>
  <div
    class="Asset__asset-container"
  >
    <div
      class="Asset__illustration-container"
    >
      <svg
        class="AssetIcon emotion-0"
        data-test-id="cf-ui-asset-icon"
        height="1em"
        viewBox="0 0 24 24"
        width="1em"
      >
        <path
          clip-rule="evenodd"
          d="M0 .5A.5.5 0 01.5 0h13a.5.5 0 01.354.146l6 6A.5.5 0 0120 6.5v17a.5.5 0 01-.5.5H.5a.5.5 0 01-.5-.5V.5zM1 1v22h18V7h-5.5a.5.5 0 01-.5-.5V1H1zm13 .707L18.293 6H14V1.707zM4 14.5a.5.5 0 01.5-.5h1.25a1.75 1.75 0 010 3.5H5v1.999a.5.5 0 01-1 0V14.5zm1.75 2a.75.75 0 100-1.5H5v1.5h.75zm2.75-2A.5.5 0 019 14h1c1.527 0 2.5 1.403 2.5 3s-.973 3-2.5 3H9a.5.5 0 01-.5-.5v-5zM10 19c.777 0 1.5-.733 1.5-2s-.723-2-1.5-2h-.5v4h.5zm4.013-5h2.5s.5 0 .5.5-.5.5-.5.5h-2v1h1s.5.013.5.5-.5.5-.5.5h-1v2.5s0 .5-.5.5-.5-.5-.5-.5-.026-4.473-.013-4.987c.013-.513.513-.513.513-.513z"
          fill-rule="evenodd"
        />
      </svg>
    </div>
    <span
      class="Asset__asset-container__title"
    >
      Image of a cat
    </span>
  </div>
</div>
`;
